--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <main role="main" class="container">
 
       <div class="starter-template">
-          <img src="img/lottosmart_logo.png" style="width: 70%; height: auto; margin-top: 6px; margin-bottom: 30px" />
+          <img src="img/lottosmart_logo.png" style="margin-top: 6px; margin-bottom: 30px" />
         <h1>Quer jogar de forma mais eficiente nas loterias?</h1>
         <p class="lead">Use nossos geradores de apostas para Mega sena, Lotofácil, Lotomania e demais loterias brasileiras. Não faça apostas no "chute". Nosso método utiliza estatísticas e características de cada modalidade de loteria para gerar jogos mais eficientes, que aumentam bastante suas chances de sucesso.</p>
           <h2>Lançamento em breve. Aguarde!</h2>
