--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta property="og:url" content="http://lottosmart.com.br">
     <meta property="og:site_name" content="ronda01">
     <meta property="og:title" content="Jogue nas loterias com mais eficiência">
-    <meta property="og:image" content="https://ronda01.github.io/lottosmart/img/lottosmart_400x400.jpg">
+    <meta property="og:image" content="https://ronda01.github.io/lottosmart/img/lottosmart_400x400.png">
     <meta property="og:image:width" content="400">
     <meta property="og:image:height" content="400">
     <meta property="og:description" content="Use nosso gerador de apostas da Lotofácil e outras loterias e aumente suas chances de ganhar.">  
