--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <meta name="twitter:description" content="Use nosso gerador de apostas da Lotofácil e outras loterias e aumente suas chances de ganhar.">
     <meta name="twitter:image" content="https://ronda01.github.io/lottosmart/img/lottosmart_400x400.png">
       
-    <meta name="googlebot" content="noodp"> <meta name="robots" content="index, follow">
+    <meta name="googlebot" content="noodp"> <meta name="robots" content="noindex, nofollow">
 
 	
       
